# voiceappdesktop

./: .gitignore  ARCHITECTURE.md  AUDIT_PROMPT_FILES.md  CHANGELOG.md  Dockerfile  HOW_TO_RUN.md  QUICKSTART.md  REFACTORING_COMPARISON.md  REFACTORING_SUMMARY.md  SETUP_GUIDE.md  app.py  app_switch.py  app_synch.py  app_v2.py  assessment_agent.py  assessment_generator.py  assessment_state_machine.py  interview_agent.py  interview_agent_synch.py  interview_agent_v2.py  pyproject.toml  requirements.txt  test_audio_events.py  test_refactored.py  test_setup.py  test_state_machine_integration.py  test_uv_setup.py
MDs/: ALTERNATIVE_SOLUTIONS.md  ASSESSMENT_IMPLEMENTATION_SUMMARY.md  ASYNC_PATTERNS_COMPARISON.md  AUDIO_CRACKLING_FIX.md  AUDIO_FLICKERING_FIX.md  AUDIO_FLOW_DIAGRAM.md  BEFORE_AFTER_COMPARISON.md  BUG_FIX_2_AUDIO_OUTPUT.md  BUG_FIX_3_EVENT_HANDLER_FLOW.md  BUG_FIX_4_IMMEDIATE_ACKNOWLEDGMENT.md  BUG_FIX_5_RACE_CONDITION.md  BUG_FIX_6_AUDIO_TIMING.md  BUG_FIX_7_EVENT_MATCHING.md  BUG_FIX_8_GUIDANCE_NOT_LOADED.md  BUG_FIX_AUDIO_TIMING.md  BUG_FIX_SUMMARY.md  BUG_FIX_SUMMARY_FINAL.md  CHANGES_EVENT_BASED.md  CHANGES_INTERVIEW_GUIDANCE_UPDATE.md  CLEANUP_SUMMARY.md  CODE_EXPLANATION.md  Dockerfile  EVENT_TIMING_ANALYSIS.md  FEATURE_USER_ACKNOWLEDGMENT.md  FINAL_CHECK_REPORT.md  FIX_ACCURATE_AUDIO_DURATION.md  FIX_AUDIO_BUFFER_DRAIN.md  FIX_BUFFER_AND_LANGUAGE.md  FIX_DYNAMIC_BUFFER_DELAY.md  FIX_GOODBYE_AUDIO_DRAIN.md  FIX_WEBSOCKET_TIMEOUT.md  FLOW_VERIFICATION.md  HTTPS_SETUP.md  (+26 more)
core/: __init__.py  assessment_agent.py  prompt_loader.py  pyproject.toml
core/resources/: README.md  interview_guide.txt  interview_system_prompt.txt  interview_system_prompt_flowchart.md  interview_system_prompt_old.txt  system_prompt.txt
desktop/: app_v2.py  interview_agent_v2.py  pyproject.toml
desktop/audio/: __init__.py  audio_config.py  audio_manager.py
desktop/handlers/: __init__.py  audio_handler.py  base_handler.py  function_handler.py  response_handler.py  transcript_handler.py
desktop/reports/: assessment_20260212_190149.json
desktop/session/: __init__.py  session_manager.py
desktop/websocket/: __init__.py  event_dispatcher.py
web/backend/: HTTPS_QUICK_START.txt  __init__.py  allow_firewall.ps1  cert.pem  get_local_ip.ps1  key.pem  pyproject.toml  realtime_bridge.py  requirements.txt  server.py  session_store.py  setup_https.ps1  setup_https_python.ps1  shared_agents.py  start_server.ps1  stop_server.ps1
web/backend/reports/: .gitkeep
(+71 files in other folders)
