[project]
name = "korean-voice-tutor-core"
version = "2.0.0"
description = "Korean Voice Tutor - Shared Core Assessment Logic"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.102.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
