[project]
name = "korean-voice-tutor-desktop"
version = "2.0.0"
description = "Korean Voice Tutor - Desktop Version (PyAudio)"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.102.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0,<14.0",
    "pyaudio>=0.2.14",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
